Совмещение достопримечательностей и персон

--- a/application/tomita/pretty.html
+++ b/application/tomita/pretty.html
@@ -164,7 +164,7 @@
 							 
 						<span title="медицинский A, nom, acc, sg, plen, m, inan">медицинский</span> 
 							 
-						<span title="центр S, nom, acc, sg, m, inan">центр</span> 
+						<span title="центр S, nom, acc, sg, m, inan (&lt;b&gt;TAuxDicArticle [Facts]&lt;/b&gt;) ">центр</span> 
 							 
 						<span title=", ">,</span> 
 							 
@@ -421,6 +421,10 @@
 <tr align="center">
 <td><a href="#2">АЛИМОВ НИКОЛАЙ</a></td>
 <td>TAuxDicArticle [имя]</td>
+</tr>
+<tr align="center">
+<td><a href="#5">центр</a></td>
+<td>TAuxDicArticle [Facts]</td>
 </tr>
 </tbody></table>
 </body>
